--- a/library.properties
+++ b/library.properties
@@ -3,8 +3,8 @@ version=1.0.1
 author=Khoi Hoang
 license=MIT
 maintainer=Khoi Hoang <khoih.prog@gmail.com>
-sentence=Enable inclusion of both ESP32 Blynk BT / BLE and WiFi libraries. Then select one at runtime.
-paragraph=Library for inclusion of both ESP32 Blynk BT / BLE and WiFi libraries. Then select one at runtime.
+sentence=Enable inclusion of both ESP32 Blynk BT/BLE and WiFi libraries. Run both simultaneouly to select one at reboot.
+paragraph=Library for inclusion of both ESP32 Blynk BT/BLE and WiFi libraries. Run both simultaneouly to select one at reboot.
 category=Communication
 url=https://github.com/khoih-prog/BlynkESP32_BT_WF
 architectures=esp32
