--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=BlynkESP32_BT_WF
-version=1.0.1
+version=1.0.2
 author=Khoi Hoang
 license=MIT
 maintainer=Khoi Hoang <khoih.prog@gmail.com>
-sentence=Enable inclusion of both ESP32 Blynk BT/BLE and WiFi libraries. Run both simultaneously or to select one at reboot.
-paragraph=Library for inclusion of both ESP32 Blynk BT/BLE and WiFi libraries. Run both simultaneously or to select one at reboot.
+sentence=Enable inclusion of both ESP32 Blynk BT/BLE and WiFi libraries. Then select one at reboot or run both. Eliminate hardcoding your Wifi and Blynk credentials and configuration data saved in either SPIFFS or EEPROM.
+paragraph=Library for inclusion of both ESP32 Blynk BT/BLE and WiFi libraries. Then select one at reboot or run both. Eliminate hardcoding your Wifi and Blynk credentials and configuration data saved in either SPIFFS or EEPROM.
 category=Communication
 url=https://github.com/khoih-prog/BlynkESP32_BT_WF
 architectures=esp32
