--- a/library.properties
+++ b/library.properties
@@ -3,8 +3,8 @@ version=1.0.2
 author=Khoi Hoang
 license=MIT
 maintainer=Khoi Hoang <khoih.prog@gmail.com>
-sentence=Enable inclusion of both ESP32 Blynk BT/BLE and WiFi libraries. Then select one at reboot or run both. Eliminate hardcoding your Wifi and Blynk credentials and configuration data saved in either SPIFFS or EEPROM.
-paragraph=Library for inclusion of both ESP32 Blynk BT/BLE and WiFi libraries. Then select one at reboot or run both. Eliminate hardcoding your Wifi and Blynk credentials and configuration data saved in either SPIFFS or EEPROM.
+sentence=Enable inclusion of both ESP32 Blynk BT/BLE and WiFi libraries. Then run both WiFi and BT/BLE simultaneously, or select one to use at runtime after reboot. 
+paragraph=Eliminate hardcoding your Wifi and Blynk credentials and configuration data saved in either SPIFFS or EEPROM.
 category=Communication
 url=https://github.com/khoih-prog/BlynkESP32_BT_WF
 architectures=esp32
