--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=BlynkESP32_BT_WF
-version=1.0.4
+version=1.0.5
 author=Khoi Hoang
 license=MIT
 maintainer=Khoi Hoang <khoih.prog@gmail.com>
 sentence=Enable inclusion of both ESP32 Blynk BT/BLE and WiFi libraries. Then select one at reboot or run both. Eliminate hardcoding your Wifi and Blynk credentials and configuration data saved in either SPIFFS or EEPROM.
-paragraph=Library for inclusion of both ESP32 Blynk BT/BLE and WiFi libraries. Then select one at reboot or run both. Eliminate hardcoding your Wifi and Blynk credentials and configuration data saved in either SPIFFS or EEPROM.
+paragraph=By design, Blynk user can run ESP32 boards with either WiFi or BT/BLE by using different sketches, and have to upload / update firmware to change. This library enables user to include both Blynk BT / BLE and WiFi libraries in one sketch, run both WiFi and BT/BLE simultaneously, or select one to use at runtime after reboot. This library also supports (auto)connection to MultiWiFi and MultiBlynk, dynamic custom as well as static parameters in Config Portal. Eliminate hardcoding your Wifi and Blynk credentials and configuration data saved in either SPIFFS or EEPROM.
 category=Communication
 url=https://github.com/khoih-prog/BlynkESP32_BT_WF
 architectures=esp32
