--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -30,7 +30,7 @@ lib_deps =
   Blynk@~0.6.1
   ESP_DoubleResetDetector@~1.0.3
 ; PlatformIO 5.x 
-; blynkkkBlynk@~0.6.1
+; blynkkk/Blynk@~0.6.1
 ; khoih-prog/ESP_DoubleResetDetector@~1.0.3
 
 build_flags =
