--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -27,11 +27,11 @@ upload_speed = 921600
 
 lib_deps =
 ; PlatformIO 4.x
-  Blynk@~0.6.1
-  ESP_DoubleResetDetector@~1.0.3
+  Blynk@>=0.6.1
+  ESP_DoubleResetDetector@>=1.1.1
 ; PlatformIO 5.x 
-; blynkkk/Blynk@~0.6.1
-; khoih-prog/ESP_DoubleResetDetector@~1.0.3
+; blynkkk/Blynk@>=0.6.1
+; khoih.prog/ESP_DoubleResetDetector@>=1.1.1
 
 build_flags =
 ; set your debug output (default=Serial)
