Remove espidf support

--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -41,7 +41,7 @@ build_flags =
 
 [env:ESP32]
 platform = espressif32
-framework = arduino, espidf
+framework = arduino
 ; ============================================================
 ; Board configuration
 ; choose your board by uncommenting one of the following lines
