--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -25,13 +25,16 @@ upload_speed = 921600
 ;monitor_speed = 9600
 ;monitor_port = COM11
 
+; Checks for the compatibility with frameworks and dev/platforms
+lib_compat_mode = strict
+
 lib_deps =
 ; PlatformIO 4.x
   Blynk@>=0.6.1
   ESP_DoubleResetDetector@>=1.1.1
 ; PlatformIO 5.x 
 ; blynkkk/Blynk@>=0.6.1
-; khoih.prog/ESP_DoubleResetDetector@>=1.1.1
+; khoih-prog/ESP_DoubleResetDetector@>=1.1.1
 
 build_flags =
 ; set your debug output (default=Serial)
